--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V 7.27.169  @ 2019-02-09
+==================  
+
+1. will suppress certain states and variables from being logged in SQL logger. only works w indigo 7.4.1
+   no change for lower  versions
+
+
 changes in V 7.26.169  @ 2019-12-03
 ==================  
 
