fixed uniFiAP Error in Line 3909 has error=local variable 'ret'
fixed uniFiAP Error in Line 3909 has error=local variable 'ret'

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,7 +1,7 @@
-changes in V 7.28.184  @ 2019-02-27
+changes in V 7.28.185  @ 2019-02-27
 ==================  
 
-1. fixed uniFiAP Error in Line 3909 has error=local variable 'ret' r
+1. fixed uniFiAP Error in Line 3909 has error=local variable 'ret' 
 
 
 
