changed -PUT to -GET for several http commands to support UDM
changed -PUT to -GET for several http commands to support UDM

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,9 @@
+changes in V 7.30.192  @ 2019-04-29
+==================  
+
+1.  chenged -PUT to -GET for several http commands to support UDM
+
+
 changes in V 7.30.191  @ 2019-04-26
 ==================  
 
