--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,7 +1,12 @@
+changes in V 7.30.194  @ 2019-04-29
+==================  
+
+1.  fixed error message for UDM 
+
 changes in V 7.30.193  @ 2019-04-29
 ==================  
 
-1.  fixed error message for UGM 
+1.  fixed error message for UDM 
 
 changes in V 7.30.192  @ 2019-04-29
 ==================  
