added some more config checks for UDM
added some more config checks for UDM

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,9 @@
+changes in V 7.30.198  @ 2019-05-02
+==================  
+
+1.  added some more config checks for UDM
+
+
 changes in V 7.30.197  @ 2019-05-01
 ==================  
 
