--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V 7.30.200  @ 2019-05-02
+==================  
+
+1.  added debug statements for UDM
+2.  added time cutoff for weblog data (only look at fresh data, do not loop though previous data returned from web log)
+3.  added back check if username not in login for UDM-pro OR  meta not in ret and meta !=ok: error connection login
+
 changes in V 7.30.198  @ 2019-05-02
 ==================  
 
