--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,9 +1,8 @@
-changes in V 7.31.240  @ 2019-05-23
+changes in V 7.31.241  @ 2019-05-23
 ==================  
 
 1. fixed error :  has error=global name 'debLeve' is not defined 
-2. fixed error :  9029 has error=local variable 'wanSpeedTest'
-
+2. added dubug info in case login not successful
 
 changes in V 7.31.239  @ 2019-05-15
 ==================  
