--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,9 @@
+changes in V 7.31.244  @ 2019-05-23
+==================  
+
+1. changed option in config to better explain the options for std vs UDM vs UDM pro
+
+
 changes in V 7.31.242  @ 2019-05-23
 ==================  
 
