--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,8 @@
+changes in V 7.31.256  @ 2019-07-12
+==================  
+
+1. tuned UDM gw dict part
+
 changes in V 7.31.255  @ 2019-07-11
 ==================  
 
