--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,8 +1,8 @@
-changes in V 7.31.257  @ 2019-07-12
+changes in V 7.31.258  @ 2019-07-12
 ==================  
 
 1. tuned UDM gw dict part
-2. added unifiApiLoginPath to print config
+2. added unifiApiLoginPath etc  to print config
 
 changes in V 7.31.255  @ 2019-07-11
 ==================  
