UDM pro and vlan support
1. requesting AP info from UDM only not UDM-pro
2. added support for info for multiple vlans in AP

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V 7.32.262  @ 2019-07-20
+==================  
+
+1. requesting AP info from UDM only not UDM-pro
+2. added support for info for multiple vlans in AP
+
+
 changes in V 7.31.262  @ 2019-07-12
 ==================  
 
