--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,8 +1,11 @@
-changes in V 7.32.263  @ 2019-07-20
+changes in V 7.32.265  @ 2019-07-21
 ==================  
   
 1. requesting AP info from UDM only not UDM-pro
 2. added support for info for multiple vlans in AP
+3. added nClients as dev state for switches, == sum of clients connetced exluding upstream
+4. added check if gateway is connected to a port, (name nmust have gatew or udm in its string) Case does NOT matter 
+   the it added "Gaetw" to the port_xx dev state
 
 
 changes in V 7.31.262  @ 2019-07-12
