--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,11 +1,15 @@
-changes in V 7.32.266  @ 2019-07-21
+changes in V 7.32.267  @ 2019-07-21
 ==================  
   
 1. requesting AP info from UDM only not UDM-pro
 2. added support for info for multiple vlans in AP
 3. added nClients as dev state for switches, == sum of clients connetced exluding upstream
 4. added check if gateway is connected to a port, (name nmust have gatew or udm in its string) Case does NOT matter 
-   the it added "Gaetw" to the port_xx dev state
+   the it added "Gtw" to the port_xx dev state
+5. added client list for GHZ channel on AP. these are the hostnames given by the AP, not the indigo device names 
+6. fixed LED .. commands, was switched to PUT, should be GET for regular gateways, not for UDM
+
+
 
 
 changes in V 7.31.262  @ 2019-07-12
