--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,4 +1,4 @@
-changes in V 7.32.268  @ 2019-07-21
+changes in V 7.32.269  @ 2019-07-21
 ==================  
   
 1. requesting AP info from UDM only not UDM-pro
@@ -8,6 +8,7 @@ changes in V 7.32.268  @ 2019-07-21
    the it added "Gtw" to the port_xx dev state
 5. added client list for GHZ channel on AP. these are the hostnames given by the AP, not the indigo device names 
 6. fixed LED .. commands, was switched to PUT, should be GET for regular gateways, not for UDM
+7. added option to count clinets on downlink ports and AP ports  in switch client totals  (nClients)
 
 
 
