--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,14 +1,14 @@
-changes in V 7.32.269  @ 2019-07-21
+changes in V 7.32.270  @ 2019-07-23
 ==================  
   
 1. requesting AP info from UDM only not UDM-pro
 2. added support for info for multiple vlans in AP
-3. added nClients as dev state for switches, == sum of clients connetced exluding upstream
+3. added nClients as dev state for switches, == sum of clients connected exluding upstream
 4. added check if gateway is connected to a port, (name nmust have gatew or udm in its string) Case does NOT matter 
-   the it added "Gtw" to the port_xx dev state
+   the it added "Gw" to the port_xx dev state
 5. added client list for GHZ channel on AP. these are the hostnames given by the AP, not the indigo device names 
 6. fixed LED .. commands, was switched to PUT, should be GET for regular gateways, not for UDM
-7. added option to count clinets on downlink ports and AP ports  in switch client totals  (nClients)
+7. added option to count clients on downlink ports and AP ports  in switch client totals  (nClients)
 
 
 
