--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,13 @@
+changes in V 7.32.275  @ 2019-07-25
+==================  
+  
+1. went through all controller web api commands to set to proper GET PUT PUSH
+   use blank instead of -X xx
+only for PUT use -X PUT (ie for enable disable devices) 
+
+
+
+
 changes in V 7.32.274  @ 2019-07-24
 ==================  
   
