--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,11 @@
+changes in V 7.33.276 @ 2019-08-13
+==================  
+  
+1. added dev/states for gateway device:
+   wan2UpTime = xH 7M zS
+2. fixed some logig for fail over
+
+
 changes in V 7.33.275 @ 2019-08-12
 ==================  
   
