added dev/state for each wan state a  wan2 state
added dev/state for each wan state a  wan2 state:
   eg: wanPingTime and wan2PingTime

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V 7.33.279 @ 2019-08-14
+==================  
+  
+1. added dev/state for each wan state a  wan2 state:
+   eg: wanPingTime and wan2PingTime
+
+
 changes in V 7.33.278 @ 2019-08-13
 ==================  
   
