--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V 7.33.285 @ 2019-10-05
+==================  
+  
+1. fixed all  "{}".format(dev.name.encode("utf8") to u"{}".format(dev.name)
+
+
+
 changes in V 7.33.284 @ 2019-09-12
 ==================  
   
