--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,9 @@
+changes in V 7.33.303 @ 2019-12-23
+==================  
+   
+1. fixed restart issue w listener, whne ap log listener restarted itself it also killed the dict listener, but did not restart that process
+
+
 changes in V 7.33.302 @ 2019-12-22
 ==================  
    
